PR/46327: David Mandelberg: Fix exit codes of background jobs (from kre)